crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__union_rejects_kind_arrow_annotation.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type Fix ('f : Big -> Big) = Fix ('f (Fix 'f))"
---
Type(
    Union(
        Param(
            Repr(
                Arrow(
                    1,
                    20,
                ),
                1,
                16,
            ),
            1,
            10,
        ),
        1,
        6,
    ),
    1,
    1,
)
