crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__union_with_params.snap
---
source: crates/nash-parse/src/declaration/union.rs
assertion_line: 268
description: "type option 'a = Some 'a | None"
---
Union(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 32,
            },
        },
        value: Union {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: "option",
            },
            arguments: [
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: "a",
                    },
                    repr: None,
                },
            ],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 18,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: "Some",
                    },
                    arguments: Positional(
                        [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 25,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    ),
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "None",
                    },
                    arguments: Positional(
                        [],
                    ),
                },
            ],
            attributes: [],
        },
    },
)
